rename the package

--- a/view_module_picture/src/main/AndroidManifest.xml
+++ b/view_module_picture/src/main/AndroidManifest.xml
@@ -1,19 +1,19 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.taojiji.view.picture">
+    package="com.from.view.picture">
 
     <application>
         <activity
-            android:name=".ui.SelectImageActivity"
+            android:name="com.from.view.picture.ui.SelectImageActivity"
             android:configChanges="orientation|screenSize"
             android:screenOrientation="nosensor" />
-        <activity android:name=".ui.PreviewImageActivity" />
+        <activity android:name="com.from.view.picture.ui.PreviewImageActivity" />
         <activity
-            android:name=".ui.CameraActivity"
+            android:name="com.from.view.picture.ui.CameraActivity"
             android:screenOrientation="nosensor"
             android:theme="@style/Theme.AppCompat.NoActionBar" />
 
         <provider
-            android:name=".PhotoProvider"
+            android:name="com.from.view.picture.PhotoProvider"
             android:authorities="${applicationId}.fileprovider"
             android:exported="false"
             android:grantUriPermissions="true">
