--- a/build.gradle
+++ b/build.gradle
@@ -19,10 +19,13 @@ allprojects {
     repositories {
         google()
         jcenter()
-        maven { url 'http://192.168.30.151:8081/nexus/content/groups/public/' }
     }
 }
 
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+ext.constraint_layout = "1.1.3"
+ext.support_version = "28.0.0"
+ext.glide_version = "4.8.0"
