--- a/gradle.properties
+++ b/gradle.properties
@@ -13,3 +13,9 @@ org.gradle.jvmargs=-Xmx1536m
 # org.gradle.parallel=true
 
 
+BUILD_TOOLS_VERSION=27.0.3
+APP_NAME=1.0.0
+APP_CODE=10
+COMPILE_SDK_VERSION=28
+MIN_SDK_VERSION=15
+TARGET_SDK_VERSION=28
