--- a/view_module_photoview/build.gradle
+++ b/view_module_photoview/build.gradle
@@ -1,28 +1,2 @@
-apply plugin: 'com.android.library'
+apply from:"../common_component_build.gradle"
 
-android {
-
-    compileSdkVersion 27
-
-
-    defaultConfig {
-        minSdkVersion 15
-        targetSdkVersion 27
-        versionCode 1
-        versionName "1.0"
-
-    }
-
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
-    }
-
-}
-
-dependencies {
-    compileOnly 'com.android.support:appcompat-v7:27.1.1'
-}
-apply from:'maven.gradle'
