--- a/view_module_photoview/src/main/AndroidManifest.xml
+++ b/view_module_photoview/src/main/AndroidManifest.xml
@@ -1,2 +1,2 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.taojiji.view.photoview" />
+    package="com.from.view.photoview" />
