--- a/view_module_picture/build.gradle
+++ b/view_module_picture/build.gradle
@@ -1,33 +1,11 @@
-apply plugin: 'com.android.library'
+apply from:"../common_component_build.gradle"
 
 android {
-    compileSdkVersion 28
-
-
-    defaultConfig {
-        minSdkVersion 15
-        targetSdkVersion 28
-        versionCode 1
-        versionName "1.0"
-
-
-    }
-
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
-    }
-
     resourcePrefix "maven_picture_"
-
 }
 
 dependencies {
-    compileOnly 'com.android.support:appcompat-v7:28.0.0'
-    compileOnly 'com.android.support:recyclerview-v7:28.0.0'
-    compileOnly 'com.github.bumptech.glide:glide:4.8.0'
-    compileOnly 'com.taojiji.view.photoview:photoview:2.2.0'
+    compileOnly "com.android.support:recyclerview-v7:$support_version"
+    compileOnly "com.github.bumptech.glide:glide:$glide_version"
+    compileOnly project(':view_module_photoview')
 }
-apply from:'maven.gradle'
