--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
@@ -36,4 +40,6 @@ dependencies {
     implementation project(':view_module_refresh')
     implementation project(':view_module_swipeback')
     implementation project(':business_module_http')
+    implementation 'com.jakewharton.timber:timber:4.7.1'
+
 }
