--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,17 @@ allprojects {
         jcenter()
         maven { url "https://jitpack.io" }
     }
+
+    subprojects {
+        project.configurations.all {
+            resolutionStrategy.eachDependency { details ->
+                if (details.requested.group == 'com.android.support'
+                        && !details.requested.name.contains('multidex')) {
+                    details.useVersion support_version
+                }
+            }
+        }
+    }
 }
 
 task clean(type: Delete) {
@@ -28,5 +39,5 @@ task clean(type: Delete) {
 }
 
 ext.constraint_layout = "1.1.3"
-ext.support_version = "28.0.0"
+ext.support_version = "27.1.1"
 ext.glide_version = "4.8.0"
