update http module

--- a/business_module_http/build.gradle
+++ b/business_module_http/build.gradle
@@ -8,10 +8,6 @@ android {
 }
 dependencies {
 
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-
     //rx
     api rootProject.ext.dependencies["rxjava2"]
     api(rootProject.ext.dependencies["rxandroid2"]) {
@@ -19,16 +15,13 @@ dependencies {
     }
     api(rootProject.ext.dependencies["rxcache2"]) {
         exclude module: 'rxjava'
-//        exclude module: 'dagger'
+        exclude module: 'dagger'
         exclude module: 'api'
     }
     implementation(rootProject.ext.dependencies["rxcache-jolyglot-gson"]) {
         exclude module: 'gson'
     }
-    api(rootProject.ext.dependencies["rxpermissions2"]) {
-        exclude module: 'rxjava'
-        exclude module: 'support-annotations'
-    }
+
     api rootProject.ext.dependencies['rxerrorhandler2']
 
     //network
@@ -51,5 +44,5 @@ dependencies {
     api rootProject.ext.dependencies["okhttp3"]
     api rootProject.ext.dependencies["gson"]
     api 'com.uber.autodispose:autodispose-android:1.1.0'
-    implementation "javax.inject:javax.inject:1"
+    compileOnly "javax.inject:javax.inject:1"
 }
