--- a/business_module_http/build.gradle
+++ b/business_module_http/build.gradle
@@ -43,6 +43,6 @@ dependencies {
     }
     api rootProject.ext.dependencies["okhttp3"]
     api rootProject.ext.dependencies["gson"]
-    api 'com.uber.autodispose:autodispose-android:1.1.0'
+    compileOnly 'com.uber.autodispose:autodispose-android:1.1.0'
     compileOnly "javax.inject:javax.inject:1"
 }
