SwipeBack 适配9P，导包清理。

--- a/business_module_http/src/main/AndroidManifest.xml
+++ b/business_module_http/src/main/AndroidManifest.xml
@@ -1,2 +1,1 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.from.business.http" />
+<manifest package="com.from.business.http" />
