--- a/view_module_photoview/src/main/AndroidManifest.xml
+++ b/view_module_photoview/src/main/AndroidManifest.xml
@@ -1,2 +1,1 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.from.view.photoview" />
+<manifest package="com.from.view.photoview" />
